# PaddleCFD

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
config/: UNet_DrivAer.yaml  UNet_ShapeNet_Car.yaml  gino.yaml  kan.yaml  ppfno.yaml  structural_mlp.yaml  transolver.yaml  transolver_starccm+.yaml  transolver_vel.yaml  transolver_wss.yaml
doc/: data.md  release_notes.md  release_notes_cn.md  release_notes_en.md
examples/: gi_fno.py  transformer_temp.py
examples/KAN/Burgers/: burgers_kan_rbf.py
examples/KAN/Sinwave/: generate_data.ipynb  sin_kan_bspline.py
examples/PPDiffusion/: run_forecast.py
examples/PPDiffusion/configs/: config_forecast.yaml
examples/PPDiffusion/datamodules/: __init__.py  abstract.py  physical.py
examples/PPDiffusion/metrics/: ensemble.py
examples/PPDiffusion/models/: __init__.py  model_utils.py  unet_simple.py
examples/PPDiffusion/process/: __init__.py  sampling.py
examples/PPDiffusion/utils/: __init__.py
examples/aerodynamic_drag_pred/ppfno/: README.md  inference.py  inferenceDataPreprocessSmesh.py  inferenceDataPreprocessVmesh.py  inference_server.py  refine.py  train.py  trainDataPreprocess.py
examples/aerodynamics/ppkan/: README.md  dataset_creation_sim.py  main.py  visualization.py
examples/darcyflow/ppdeeponet/: README.md  config.yaml  pimultionet.py
examples/darcyflow/ppkan/: README.md  main.py  requirements.txt
examples/flow_field_prediction/ppdiffusion/: README.md  README_CN.md  requirements.txt  train.py
examples/ppdeeponet/: PINN.py  README.md  config.yaml  ldc_2d_Re3200_piratenet.py  pimultionet.py
examples/ppdeeponet/Solvers/: DGNO.py  PIMultiONet.py
examples/ppdeeponet/Utils/: PlotFigure.py  RBFInterpolatorMesh.py
examples/ppdeeponet/conf/: ldc_2d_Re3200_piratenet.yaml
examples/ppdeeponet/greensonet/: inference.py  main.py  model.py  options.py  problem.py  trainer.py  utils.py
examples/ppdeeponet/pinn/: README.md  ldc_2d_Re3200_piratenet.py
examples/ppdiffusion/: README.md  README_CN.md  dataset_script.ipynb  run.py  train.py
examples/ppdiffusion/configs/: config.yaml
examples/ppdiffusion/datamodules/: __init__.py  physical.py  rawdata_ns.py
examples/ppdiffusion/metrics/: __init__.py  ensemble.py
examples/ppdiffusion/models/: __init__.py  base_model.py  simple_conv_net.py  unet.py  unet_simple.py
examples/ppdiffusion/process/: __init__.py  dyffusion.py  forecasting.py  interpolation.py  sampling.py
examples/ppdiffusion/utils/: __init__.py  functions.py  utils.py
examples/ppfno/: ppfno_main.py
examples/ppkan/Airfoil/: dataset_creation_sim.py  main.py  main.yaml  mlp.py  visualization.py
examples/ppkan/Burgers/: burgers_kan_rbf.py
examples/ppkan/ChipHeat/: chip_heat_kan.py  chip_kanonet.py  main.py
examples/ppkan/Darcy/: Darcy.ipynb
examples/ppkan/Sinwave/: sin_kan_bspline.py  sin_kan_rbf.py
examples/pptransformer/: README.md  infer.py  main.py  main_shapenetcar.py  run.sh  transformer.yaml  transformer_temp.py  transolver.py
examples/pptransformer/configs/: transolver_shapenetcar.yaml
ppcfd/: __init__.py
ppcfd/data/: __init__.py  csv_stl2npy.py  download_dataset.py  downloader.py  loader.py  mat2npz.py  msh2npz.py  shapenetcar_datamodule.py  su2_vtk2npy.py  vtk_to_paddledict.py
ppcfd/data/parser/: __init__.py  base_parser.py  csv_stl2npy.py  mat2npz.py  msh2npz.py  su2_vtk2npy.py  vtk_to_paddledict.py
ppcfd/models/: __init__.py
ppcfd/models/ppdiffusion/: __init__.py  unet_simple.py
ppcfd/models/ppfno/: README.md  __init__.py  inference.py  inferenceDataPreprocessSmesh.py  inferenceDataPreprocessVmesh.py  inference_server.py  refine.py  (+3 more)
ppcfd/utils/: __init__.py  logger.py  parallel.py  parrallel.py  utils.py
(+111 files in other folders)
